# echoes-of-ascension

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  justfile
.cargo/: config.toml
.sqlx/: query-76811378181edbd741685f253a2628f4ff2e8623c00e0675f2b5866cda7c49bf.json
app/: Cargo.toml
app/src/: config.rs  lib.rs  startup.rs  telemetry.rs  validation.rs
app/src/components/: app.rs  mod.rs  register.rs
app/src/db/: users.rs
app/src/models/: response.rs  user.rs
app/src/models/user/: error.rs  form.rs  mod.rs  new_user.rs  user_code.rs  username.rs
app/src/server_fn/: auth.rs
backend/: Cargo.toml
backend/config/: base.toml
backend/migrations/: 20250125123853_init.up.sql
backend/src/: config.rs  lib.rs  main.rs  server.rs  startup.rs
backend/src/db/: users.rs
backend/src/domain/user/: mod.rs  user_code.rs  username.rs
backend/src/routes/: mod.rs
backend/src/routes/api/v1/: auth.rs
config/: base.toml
end2end/: playwright.config.ts
end2end/tests/: example.spec.ts
frontend/: Cargo.toml
frontend/src/: app.rs  lib.rs  main.rs
frontend/src/components/: app.rs  mod.rs  register.rs
migrations/: 20250125123853_init.down.sql  20250125123853_init.up.sql
scripts/: init_db
server/: Cargo.toml
server/src/: application.rs  config.rs  lib.rs  main.rs  server.rs  startup.rs
server/src/db/: mod.rs  user.rs  users.rs
server/src/domain/: mod.rs  new_user.rs  user.rs  user_code.rs  username.rs
server/src/error/: mod.rs  server.rs  user.rs
server/src/routes/: mod.rs
server/src/routes/api/: mod.rs
server/src/routes/api/v1/: auth.rs  mod.rs
server/src/routes/user/: mod.rs  register.rs
src/: lib.rs  main.rs  startup.rs
src/config/: application.rs  database.rs  environment.rs  mod.rs
src/domain/: mod.rs
src/domain/user/: mod.rs  new_user.rs  user_code.rs  username.rs
src/errors/: app.rs  user.rs
src/middleware/: telemetry.rs
src/models/: mod.rs
src/repositories/: mod.rs  user.rs
src/routes/: mod.rs
src/routes/api/: mod.rs
src/routes/api/v1/: auth.rs  mod.rs
src/services/: mod.rs
tests/api/: helpers.rs
