[workspace]
members = ["frontend", "backend"]
resolver = "2"

[workspace.dependencies]
cfg-if = "1"
http = "1"
thiserror = "2.0"
wasm-bindgen = "=0.2.100"
tokio = { version = "1.43", features = ["rt", "macros", "tracing"] }
serde = { version = "1", features = ["derive"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
uuid = { version = "1.12", features = ["v4", "serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[workspace.lints.clippy]
nursery = "warn"
unwrap_used = "warn"
style = "warn"
perf = "warn"
