[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[package.metadata.nextest]
slow-timeout = { period = "120s", terminate-after = 3 }
