[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
sqlx.workspace = true
uuid.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
secrecy.workspace = true
unicode-segmentation.workspace = true
rand.workspace = true
config.workspace = true
serde-aux.workspace = true
argon2.workspace = true
password-hash.workspace = true
hex.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]
