[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true

axum.workspace = true
tokio.workspace = true
tower.workspace = true
thiserror.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-log.workspace = true
sqlx.workspace = true
serde.workspace = true
serde-aux.workspace = true
config.workspace = true
secrecy.workspace = true
uuid.workspace = true
