[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
thiserror.workspace = true

axum.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
secrecy.workspace = true
serde.workspace = true
serde-aux.workspace = true
config.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-log.workspace = true
uuid.workspace = true
rand.workspace = true
argon2.workspace = true
unicode-segmentation.workspace = true
password-hash.workspace = true
hex.workspace = true
leptos_router.workspace = true

[lints]
workspace = true
